added a scroll to explore animated indicator

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,21 @@
     --shiny-cta-highlight-subtle: #8484ff;
   }
 
+  html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 80px; /* This accounts for the fixed navbar height */
+  }
+
+  body {
+    @apply bg-background text-foreground;
+    font-feature-settings: "rlig" 1, "calt" 1;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+  }
+
   .light {
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
@@ -246,15 +261,6 @@
 @layer base {
   * {
     @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-    font-feature-settings: "rlig" 1, "calt" 1;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    -webkit-font-smoothing: antialiased;
   }
 }
 
